[package]
name = "likes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.8.4"
ic-cdk = "0.7.1"
ic-cdk-macros = "0.6.9"
serde_bytes = "0.11.5"
crc = "3.0"
serde = "1.0.133"